examples/test/testpolicy19952.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19952
  namespace: namespace418
spec:
  podSelector:
    matchLabels:
      key7: value4
      key24: value5
      key42: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value49
          key39: value34
      podSelector:
        matchLabels:
          key43: value11
